--- a/Cluster_Note_Navaneeth_0.0.ipynb
+++ b/Cluster_Note_Navaneeth_0.0.ipynb
@@ -6,14 +6,14 @@
     "collapsed": true
    },
    "source": [
-    "<h1 align=center> <font size = 5> Segmenting and Clustering Neighborhoods in Toronto </font></h1>"
+    "# Segmenting and Clustering Neighborhoods in Toronto"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Navaneeth's Capestone project - Webscrap , Data preparation , segmenting and clustering\n",
+    "### Navaneeth's Capestone project - Webscrap , Data preparation , segmenting and clustering\n",
     "\n",
     "This Notebook contains the process to webscrape the following Wikipedia page, https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M, and clean the data for further processing. Let see the steps inorder to obtain the data that is in the table of postal codes and to transform the data into a pandas dataframe.The dataframe will consist of three columns: PostalCode, Borough, and Neighborhood. Only process the cells that have an assigned borough. Ignore cells with a borough that is Not assigned.More than one neighborhood can exist in one postal code area. These two rows will be combined into one row with the neighborhoods separated with a comma.If a cell has a borough but a Not assigned neighborhood, then the neighborhood will be the same as the borough. Get the final size which is the number of rows and columns of the cleansed dataframe."
    ]
